# MCTS

./: .gitignore  CMakeLists.txt  README.md
data/: data.csv
deprecated/data/: points.npy
deprecated/src/cc/: mcts.cpp  mcts.cu  mcts.cuh  mcts.hpp
deprecated/src/cc/hearts/: CMakeLists.txt  flownetwork.cpp  flownetwork.hpp  hearts.hpp
deprecated/src/cc/tsp/: CMakeLists.txt  tsp.hpp
deprecated/tools/: dispatcher.py  tsplib.ipynb
src/: alphaPy.py  chess.hpp  connect4.hpp  defs.hpp  flownetwork.cpp  flownetwork.hpp  hearts.cpp  hearts.hpp  main.cpp  main_chess.cpp  main_connect4.cpp  main_hearts.cpp  main_tsp.cpp  mctree.hpp  mcts.cpp  mcts.cu  mcts.cuh  mcts.hpp  mcts_debug.hpp  tsp.hpp
src/cc/: mcts.hpp
src/cc/chess/: CMakeLists.txt  chess.hpp  main.cpp
src/cc/connect4/: CMakeLists.txt  connect4.hpp  main.cpp
src/cc/pyExecute/: pyExecute.py
src/python/: requirements.txt  setup.py
src/python/Alpha4/: connect4.py  database.py  logger.py  main.py  mcts.py  model.py  model_lite.py  model_rt.py
tools/: visualization.ipynb
